--- a/pages/order/choose2/choose2.wxss
+++ b/pages/order/choose2/choose2.wxss
@@ -58,6 +58,8 @@ Page {
   display: flex;
   align-items: center;
   justify-content: center;
+  white-space: normal !important;
+  padding: 5rpx 5rpx;
 }
 
 .left_item.active {
