--- a/pages/order/cart/cart.wxss
+++ b/pages/order/cart/cart.wxss
@@ -4,115 +4,144 @@ Page {
   background-color: #f5f5f5;
 }
 
-/* 商品 */
+/* list */
 
-.good {
-  padding: 28rpx 24rpx;
-}
-
-.good_info {
-  color: #000;
-  font-size: 25rpx;
-}
-
-.good_count_ctrl {
-  width: 40rpx;
-  height: 40rpx;
-}
-
-.good_count {
-  margin: 0 36rpx;
-}
-
-/* 附加信息 */
-
-.form {
+.container {
   padding-left: 24rpx;
   padding-right: 24rpx;
   background-color: #fff;
-  margin: 24rpx 0;
 }
 
-.form_title, .form_item {
-  height: 85rpx;
-  display: flex;
-  align-items: center;
+/* 右侧item */
+
+.item_content {
+  padding: 24rpx 0;
+  /* border-bottom: 1px solid #e6e6e6; */
+  height: 184rpx;
 }
 
-.form_title {
-  font-size: 28rpx;
-  color: #000;
+.item_img_box {
+  width: 180rpx;
+  height: 180rpx;
+  border: 1px solid #e6e6e6;
 }
 
-.form_item {
-  color: #9b9b9b;
-  justify-content: space-between;
-  border-bottom: 1px solid #e6e6e6;
-}
-
-.form_item:last-child {
-  border-bottom: none;
-}
-
-.form_label {
-  width: 107rpx;
-  text-align: justify;
-  text-align-last: justify;
-}
-
-.form_input {
-  flex: 1 0 0;
-  width: 0;
-  padding-left: 36rpx;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  color: #000;
-}
-
-.form_input_input {
+.item_img {
   width: 100%;
   height: 100%;
 }
 
-.form_input_placeholder {
+.item_content_content {
+  flex: 1 0 0;
+  width: 0;
+  height: 100%;
+  padding-left: 24rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item_tag {
+  height: 31rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20rpx;
+  border: 1px solid #e6e6e6;
+  padding: 0 12rpx;
+  margin-right: 12rpx;
+}
+
+/* form */
+
+.item {
+  padding-left: 24rpx;
+  padding-right: 24rpx;
+  height: 84rpx;
+  border-bottom: 1rpx solid #d7d6d6;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+.label {
+  width: 139rpx;
+  color: #000;
+}
+
+.input {
+  flex: 1 0 0;
+  width: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+/* 使用上方地址按钮 */
+
+.addressBtn {
+  margin: 0;
+  /* width: 91rpx; */
+  padding: 0 12rpx;
+  height: 42rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24rpx;
   color: #9b9b9b;
 }
 
 /* 下面按钮 */
 
-.btn_submit {
+/* 下面按钮 提交订单 */
+
+.ctrl {
   box-sizing: content-box;
-  background: linear-gradient(to bottom, #00a7ff, #0289fe);
+  height: 105rpx;
+  width: calc(100% - 48rpx);
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 89rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  padding-left: 24rpx;
+  padding-right: 24rpx;
+  z-index: 9;
+}
+
+.submit {
+  width: 197rpx;
+  height: 79rpx;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #00a6ff;
   color: #fff;
-  font-size: 28rpx;
+  font-size: 33rpx;
 }
 
-.btn_submit_active {
-  background: linear-gradient(to bottom, #0ca4f4, #0e89f3);
+.submit_hover {
+  background-color: #0397e6;
 }
 
-.btn_submit.isX {
+.isX {
   padding-bottom: 62rpx;
 }
 
-
 /* 结果modal */
-.result_modal{
+
+.result_modal {
   width: 604rpx;
   height: 393rpx;
   color: #000;
 }
-.btn_result{
+
+.btn_result {
   box-sizing: content-box;
   background: linear-gradient(to bottom, #00a7ff, #0289fe);
   width: 242rpx;
@@ -122,4 +151,27 @@ Page {
   justify-content: center;
   color: #fff;
   font-size: 25rpx;
+}
+
+/* 修改价格modal */
+
+.editprice_modal {
+  height: 400rpx;
+  background-color: #fff;
+  font-size: 25rpx;
+}
+
+.price_item {
+  display: flex;
+  align-items: center;
+  width: 74%;
+  height: 80rpx;
+}
+
+.price_item_label {
+}
+
+.price_item_input {
+  flex: 1 0 0;
+  width: 0;
 }
