--- a/pages/order/choose2/choose2.wxml
+++ b/pages/order/choose2/choose2.wxml
@@ -8,7 +8,7 @@
         color="#9B9B9B"
       />
       <input class="search_input"
-        placeholder="请搜索产品名称或助记码"
+        placeholder="请搜索产品名称或机型码"
         confirm-type='搜索'
         disabled="{{true}}"
       ></input>
@@ -65,7 +65,10 @@
           </view>
         </view>
       </block>
-      <view wx:else class="noresult">暂无数据</view>
+      <view wx:else class="noresult">
+        <text wx:if="{{active_left==0}}">暂无选择</text>
+        <text wx:else>暂无数据</text>
+      </view>
     </view>
   </view>
 
@@ -74,5 +77,5 @@
     hover-class="nextStep_active"
     hover-stay-time="{{200}}"
     bindtap="clickBtn"
-  >下一步</view>
+  >确定</view>
 </view>
