--- a/pages/order/doing_search/doing_search.wxml
+++ b/pages/order/doing_search/doing_search.wxml
@@ -25,7 +25,7 @@
   <block wx:if="{{resultList&&resultList.length>0}}">
     <view wx:for="{{resultList}}" wx:key="index"
       class="result"
-      bindtap="goChooseGoods"
+      bindtap="goOrderDetail"
       data-item="{{item}}"
     >
       <view class="result_title">{{item.orderNo}}</view>
@@ -55,11 +55,4 @@
 
   <view style="height:360rpx;"></view>
   
-
-  <!-- 按钮 -->
-  <view class="btn_submit{{isX?' isX':''}}" 
-    hover-class="btn_submit_active"
-    hover-stay-time="{{200}}"
-    bindtap="clickOrder"
-  >下单</view>
 </view>
