--- a/pages/order/doing_search/doing_search.wxss
+++ b/pages/order/doing_search/doing_search.wxss
@@ -46,10 +46,27 @@
   margin: 24rpx 48rpx;
 }
 
-.result_title, .result_item {
+.result_content {
+  margin-left: 24rpx;
+  margin-right: 24rpx;
+  padding: 10rpx 0;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.result_content:last-child {
+  border-bottom: none;
+}
+
+.result_title {
   height: 85rpx;
   padding-left: 24rpx;
   padding-right: 24rpx;
+  display: flex;
+  align-items: center;
+}
+
+.result_item {
+  height: 55rpx;
   display: flex;
   align-items: center;
 }
@@ -60,11 +77,6 @@
 
 .result_item {
   justify-content: space-between;
-  border-bottom: 1px solid #e6e6e6;
-}
-
-.result_item:last-child {
-  border-bottom: none;
 }
 
 .result_label {
