--- a/pages/order/doing_search_detail/doing_search_detail.wxml
+++ b/pages/order/doing_search_detail/doing_search_detail.wxml
@@ -1,28 +1,39 @@
 <!-- 转销售 -->
 <view class="doing_search_page">
 
-  <!-- 搜索结果 -->
-  <view class="result">
-    <view class="result_title">{{item.orderNo}}</view>
-    <view 
-      class="result_content"
-    >
-      <view class="result_item">
-        <view class="result_label">客户姓名</view>
-        <view>{{itm.custName}}</view>
+  <view wx:for="{{order.goodsList}}" wx:key="index"
+    class="result_content"
+  >
+    <view class="result_item result_title van-hairline--bottom">
+      <view wx:if="{{order}}">{{order.orderNo}}</view>
+      <button wx:if="{{order&&order.goodsList.length>1}}"
+        class="deleteBtn"
+        bindtap="deleteGoods"
+        data-index="{{index}}"
+      >删除</button>
+    </view>
+    <view class="result_item van-hairline--bottom">
+      <view class="result_label">商品名称</view>
+      <view class="result_input result_input_goods"
+        bindtap="goChooseGoods"
+        data-goods="{{item}}"
+        data-index="{{index}}"
+      >
+        <view>{{item.goodsName}}</view>
+        <van-icon name="arrow" custom-style="position:relative;top:2rpx;" />
       </view>
-      <view class="result_item">
-        <view class="result_label">客户电话</view>
-        <view>{{itm.phoneNumber}}</view>
-      </view>
-      <view class="result_item">
-        <view class="result_label">商品名称</view>
-        <view>{{itm.goodsName}}</view>
-      </view>
-      <view class="result_item">
-        <view class="result_label">安装地址</view>
-        <view>{{itm.provinceName}}{{itm.eparchyName}}{{itm.cityName}}{{itm.address}}</view>
-      </view>
+    </view>
+    <view class="result_item van-hairline--bottom">
+      <view class="result_label">客户姓名</view>
+      <view class="result_input">{{item.custName}}</view>
+    </view>
+    <view class="result_item van-hairline--bottom">
+      <view class="result_label">客户电话</view>
+      <view class="result_input">{{item.phoneNumber}}</view>
+    </view>
+    <view class="result_item">
+      <view class="result_label">安装地址</view>
+      <view class="result_input">{{item.provinceName}}{{item.eparchyName}}{{item.cityName}}{{item.address}}</view>
     </view>
   </view>
 
