--- a/pages/order/cart/cart.wxss
+++ b/pages/order/cart/cart.wxss
@@ -55,13 +55,9 @@ Page {
 /* form */
 
 .item {
-  padding-left: 24rpx;
-  padding-right: 24rpx;
   height: 84rpx;
-  border-bottom: 1rpx solid #d7d6d6;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   background-color: #fff;
 }
 
@@ -71,11 +67,9 @@ Page {
 }
 
 .input {
-  flex: 1 0 0;
-  width: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  width: calc(100% - 139rpx);
+  height: 100%;
+  line-height:84rpx;
   text-align: right;
 }
 
