--- a/pages/order/choose2_single/choose2_single.wxss
+++ b/pages/order/choose2_single/choose2_single.wxss
@@ -32,6 +32,8 @@ Page {
   flex: 1 0 0;
   height: 100%;
   padding-left: 16rpx;
+  display: flex;
+  align-items: center;
 }
 
 /* content */
@@ -90,7 +92,7 @@ Page {
   height: 184rpx;
 }
 
-.item_content_hover{
+.item_content_hover {
   background-color: #ececec;
 }
 
@@ -125,4 +127,3 @@ Page {
   padding: 0 12rpx;
   margin-right: 12rpx;
 }
-
