--- a/pages/order/site_order_new/site_order_new.wxss
+++ b/pages/order/site_order_new/site_order_new.wxss
@@ -55,6 +55,11 @@ Page {
   height: 100%;
   flex: 1 0 0;
   padding-left: 35rpx;
+  
+  /* width: calc(100% - 139rpx);
+  height: 100%;
+  line-height:84rpx;
+  text-align: right; */
 }
 
 /* 导购员picker */
