--- a/pages/order/cart/cart.wxml
+++ b/pages/order/cart/cart.wxml
@@ -167,11 +167,11 @@
   >
     <view class="flexColumn editprice_modal">
       <view class="price_item">
-        <view class="price_item_label">当前价格：</view>
+        <view class="price_item_label">当前价格(元)：</view>
         <view wx:if="{{lookingIndex!==null}}" class="price_item_input">{{selectedList[lookingIndex].priceFeeYuan}}</view>
       </view>
       <view class="price_item">
-        <view class="price_item_label">修改价格：</view>
+        <view class="price_item_label">修改价格(元)：</view>
         <input class="price_item_input"
           placeholder="请输入"
           value="{{price1}}"
@@ -180,7 +180,7 @@
         ></input>
       </view>
       <view class="price_item">
-        <view class="price_item_label">确认价格：</view>
+        <view class="price_item_label">确认价格(元)：</view>
         <input class="price_item_input"
           placeholder="请输入"
           value="{{price2}}"
