--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -1,113 +1,128 @@
-<!-- 下单主页 -->
+<!-- 订单主页 -->
 <view class="order_page">
-  <!-- 搜索 -->
-  <view class="search_wrap bg_white">
-    <view class="search_content flexCenter">
-      <van-icon name="search" 
-        size="1.5em" 
-        color="#9B9B9B"
-      />
-      <input class="search_input"
-        placeholder="输入型号"
-        confirm-type='搜索'
-      ></input>
+  <!-- 固定 -->
+  <view class="top">
+    <!-- 搜索 -->
+    <view class="search_wrap bg_white">
+      <view class="search_content flexCenter">
+        <van-icon name="search" 
+          size="1.5em" 
+          color="#9B9B9B"
+        />
+        <input class="search_input"
+          placeholder="输入型号"
+          confirm-type='搜索'
+        ></input>
+      </view>
+    </view>
+
+    <!-- 状态 -->
+    <view class="nav">
+      <view wx:for="{{navList}}" wx:key="index"
+        class="nav_item{{navIndex==index?' active':''}}"
+        bindtap="clickNav"
+        data-index="{{index}}"
+      >{{item}}</view>
     </view>
   </view>
+  
 
-  <!-- 列表 -->
+  <!-- list -->
   <view class="list">
-    <!-- tab -->
-    <van-tabs 
-      active="{{ active }}" 
-      bind:change="onChange"
-      swipe-threshold="{{5}}"
-      color="#00A6FF"
-    >
-      <van-tab title="全部">
-        <view class="list_content_wrap">
-          <view class="list_content">
-            <view wx:for="{{list_1}}" wx:key="index"
-              class="list_item bg_white"
-            >
-              <view class="list_item_title flexCenter flexBetween van-hairline--bottom">
-                <view class="list_item_name">姓名 {{item.name}}</view>
-                <view class="list_item_status">{{item.status}}</view>
-              </view>
-              <view class="list_item_address flexCenter">{{item.address}}</view>
-            </view>
+    <!-- 认筹单接口 -->
+    <block wx:if="{{navIndex==0||navIndex==1}}">
+      <view wx:for="{{showList}}" wx:key="index"
+        class="item"
+        bindtap="goDetail"
+        data-item="{{item}}"
+      >
+        <view class="item_title van-hairline--bottom">{{item.orderNo}}</view>
+        <view wx:for="{{item.goodsList}}" wx:for-index="idx" wx:for-item="itm"
+          wx:key="idx"
+          class="item_content flexCenter flexBetween"
+        >
+          <view class="item_img_box">
+            <image class="item_img" src="{{itm.logoImage}}" alt=''></image>
           </view>
-        </view>
-      </van-tab>
-      <van-tab title="未付款">
-        <view class="list_content">
-          <view class="list_content_wrap">
-            <view class="list_content">
-              <view wx:for="{{list_2}}" wx:key="index"
-                class="list_item bg_white"
-              >
-                <view class="list_item_title flexCenter flexBetween van-hairline--bottom">
-                  <view class="list_item_name">姓名 {{item.name}}</view>
-                  <view class="list_item_status">{{item.status}}</view>
-                </view>
-                <view class="list_item_address flexCenter">{{item.address}}</view>
-              </view>
+          <view class="item_content_content">
+            <view class="item_content_content_top">
+              <view class="textOmit" style="color:#000;font-size:25rpx;">{{itm.goodsName}}</view>
+              <view style="color:#9B9B9B;font-size:22rpx;margin:10rpx 0;">{{itm.goodsDesc}}</view>
+              <!-- <view class="flex">
+                <view wx:for="{{item.tag}}"
+                  wx:for-index="tagIndex" 
+                  wx:for-item="tagName"
+                  wx:key="tagIndex"
+                  class="item_tag"
+                >{{tagName}}</view>
+              </view> -->
             </view>
-          </view>
-        </view>
-      </van-tab>
-      <van-tab title="已付款">
-        <view class="list_content">
-          <view class="list_content_wrap">
-            <view class="list_content">
-              <view wx:for="{{list_3}}" wx:key="index"
-                class="list_item bg_white"
-              >
-                <view class="list_item_title flexCenter flexBetween van-hairline--bottom">
-                  <view class="list_item_name">姓名 {{item.name}}</view>
-                  <view class="list_item_status">{{item.status}}</view>
-                </view>
-                <view class="list_item_address flexCenter">{{item.address}}</view>
+            
+            <view class="yuan_wrap flexCenter flexBetween">
+              <view>
+                {{itm.priceFeeYuan}}元
+                <text wx:if="{{navIndex==1&&item.orderStatus==50}}"><text decode="{{true}}">&nbsp;</text>x{{itm.goodsCount}}</text>
               </view>
             </view>
           </view>
         </view>
-      </van-tab>
-      <van-tab title="已退单">
-        <view class=" ">
-          <view class="list_content_wrap">
-            <view class="list_content">
-              <view wx:for="{{list_4}}" wx:key="index"
-                class="list_item bg_white"
-              >
-                <view class="list_item_title flexCenter flexBetween van-hairline--bottom">
-                  <view class="list_item_name">姓名 {{item.name}}</view>
-                  <view class="list_item_status">{{item.status}}</view>
-                </view>
-                <view class="list_item_address flexCenter">{{item.address}}</view>
-              </view>
+        <!-- 已登录的按钮 -->
+        <!-- <view wx:if="{{navIndex==1}}" class="item_ctrl">
+          <button class="ctrl_btn"
+            hover-class="ctrl_btn_active"
+            bindtap="goChooseGoods"
+            data-index="{{index}}"
+          >修改商品</button>
+          <button class="ctrl_btn"
+            hover-class="ctrl_btn_active"
+            bindtap="goCart"
+            data-index="{{index}}"
+          >提交</button>
+        </view> -->
+      </view>
+    </block>
+    <!-- 销售单接口 -->
+    <block wx:if="{{navIndex==2||navIndex==3}}">
+      <view wx:for="{{showList}}" wx:key="index"
+        class="item"
+        bindtap="goDetail"
+        data-item="{{item}}"
+      >
+        <view class="item_title van-hairline--bottom">{{item.tradeNo}}</view>
+        <view wx:for="{{item.goodsList}}" wx:for-index="idx" wx:for-item="itm"
+          wx:key="idx"
+          class="item_content flexCenter flexBetween"
+        >
+          <view class="item_img_box">
+            <image class="item_img" src="{{itm.logoImage}}" alt=''></image>
+          </view>
+          <view class="item_content_content">
+            <view class="item_content_content_top">
+              <view class="textOmit" style="color:#000;font-size:25rpx;">{{itm.goodsName}}</view>
+              <view style="color:#9B9B9B;font-size:22rpx;margin:10rpx 0;">{{itm.goodsDesc||itm.goodsModel}}</view>
+              <!-- <view class="flex">
+                <view wx:for="{{item.tag}}"
+                  wx:for-index="tagIndex" 
+                  wx:for-item="tagName"
+                  wx:key="tagIndex"
+                  class="item_tag"
+                >{{tagName}}</view>
+              </view> -->
+            </view>
+            
+            <view class="yuan_wrap flexCenter flexBetween">
+              <view>{{itm.tradeFeeStr}}元</view>
             </view>
           </view>
         </view>
-      </van-tab>
-      <van-tab title="已退款">
-        <view class="list_content">
-          <view class="list_content_wrap">
-            <view class="list_content">
-              <view wx:for="{{list_5}}" wx:key="index"
-                class="list_item bg_white"
-              >
-                <view class="list_item_title flexCenter flexBetween van-hairline--bottom">
-                  <view class="list_item_name">姓名 {{item.name}}</view>
-                  <view class="list_item_status">{{item.status}}</view>
-                </view>
-                <view class="list_item_address flexCenter">{{item.address}}</view>
-              </view>
-            </view>
-          </view>
-        </view>
-      </van-tab>
-    </van-tabs>
+      </view>
+    </block>
+    
+    <view wx:if="{{showList.length==0}}" class="noresult">暂无数据</view>
   </view>
+
+  <view style="height:200rpx;"></view>
+
 
 
   <!-- tabbar -->
@@ -154,7 +169,7 @@
         src="https://cdn.s.bld365.com/getli_tab_icon_03_active.png"
         mode="aspectFit"
       />
-      下单
+      订单
     </van-tabbar-item>
     <van-tabbar-item>
       <image
