--- a/pages/order/order_index/order_index.wxss
+++ b/pages/order/order_index/order_index.wxss
@@ -3,13 +3,16 @@
 Page {
   background-color: #f5f5f5;
   color: #000;
-  height: 100%;
-  overflow: hidden;
 }
 
-.order_page {
-  height: 100%;
-  overflow: hidden;
+/* 固定 */
+
+.top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
 }
 
 /* 搜索 */
@@ -28,80 +31,133 @@ Page {
   padding-left: 19rpx;
   padding-right: 19rpx;
 }
-.search_input{
+
+.search_input {
   flex: 1 0 0;
   height: 100%;
   padding-left: 16rpx;
 }
 
+/* 状态导航 */
+
+.nav {
+  height: 82rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1rpx solid #d7d6d6;
+  background-color: #fff;
+}
+
+.nav_item {
+  width: 86rpx;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav_item.active {
+  border-bottom: 2PX solid #00a6ff;
+}
 
 /* 列表 */
-.list{
-  margin-top: -5rpx;
+
+.list {
+  margin-top: 203rpx;
   position: relative;
   z-index: 1;
 }
 
-.list_title {
-  height: 82rpx;
-  padding-left: 24rpx;
-  padding-right: 24rpx;
-}
-
-.list_title_more {
-  color: #d7d6d6;
-  font-size: 22rpx;
-}
-
-.list_title_right_arrow {
-  width: 22rpx;
-  height: 22rpx;
-  margin-left: 13rpx;
-}
-
-/* list tab样式修正 */
-
-.order_page .van-ellipsis.van-ellipsis.van-tab.van-tab.van-tab--active.van-tab--active .van-ellipsis.van-ellipsis.van-tab__title.van-tab__title {
-  color: #00a6ff !important;
-}
-
-.order_page .van-ellipsis.van-ellipsis.van-tab__title.van-tab__title {
-  font-size: 22rpx !important;
-  color: #4a4a4a !important;
-}
-
-/* list tab样式修正 end */
-
-.list_content_wrap {
-  overflow-y: auto;
-  height: calc(100vh - 625rpx);
-}
-
-.list_content {
-  margin-bottom: 120rpx;
-}
-
-.list_item {
+.item {
   margin: 24rpx;
+  background-color: #fff;
+  border-radius: 5rpx;
   padding-left: 24rpx;
   padding-right: 24rpx;
 }
 
-.list_item_title {
-  height: 80rpx;
-}
-
-.list_item_name {
+.item_title {
+  height: 84rpx;
+  display: flex;
+  align-items: center;
   color: #000;
   font-size: 28rpx;
 }
 
-.list_item_status {
-  font-size: 24rpx;
+/* 右侧item */
+
+.item_content {
+  padding: 24rpx 0;
+  height: 184rpx;
+  border-bottom: 1px solid #e6e6e6;
 }
 
-.list_item_address {
-  color: #4a4a4a;
-  font-size: 22rpx;
-  height: 80rpx;
+.item_content:last-child {
+  border-bottom: none;
+}
+
+.item_img_box {
+  width: 180rpx;
+  height: 180rpx;
+  border: 1px solid #e6e6e6;
+}
+
+.item_img {
+  width: 100%;
+  height: 100%;
+}
+
+.item_content_content {
+  flex: 1 0 0;
+  width: 0;
+  height: 100%;
+  padding-left: 24rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item_tag {
+  height: 31rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20rpx;
+  border: 1px solid #e6e6e6;
+  padding: 0 12rpx;
+  margin-right: 12rpx;
+}
+
+/* 控制按钮 */
+
+.item_ctrl {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 13rpx 0;
+}
+
+.ctrl_btn {
+  display: flex;
+  align-items: center;
+  height: 50rpx;
+  margin: 0;
+  margin-left: 13rpx;
+  padding: 0 15rpx;
+  border: 1rpx solid #00a6ff;
+  border-radius: 10rpx;
+  background-color: #fff;
+  font-size: 24rpx;
+  color: #00a6ff;
+}
+
+.ctrl_btn_active {
+  background-color: #e8e8e8;
+}
+
+/* 暂无数据 */
+
+.noresult {
+  text-align: center;
 }
